# exam-helper

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
docs/: export-to-word.md  getting-started.md  images-and-math.md  validation.md
skills/github-issue-workflow/: SKILL.md
skills/github-issue-workflow/agents/: openai.yaml
skills/github-issue-workflow/references/: agents-github-issue-workflow.md
src/exam_helper/: ai_service.py  app.py  checker_runtime.py  cli.py  config.py  export_docx.py  models.py  prompt_catalog.py  prompt_templates.yaml  repository.py  solution_runtime.py  validation.py
src/exam_helper/templates/: index.html  question_form.html
tests/integration/: test_app_ai_config_and_usage.py  test_app_export_docx.py  test_app_question_save.py  test_autosave_and_ai_errors.py  test_export_docx.py
tests/unit/: test_ai_service.py  test_checker_runtime.py  test_config.py  test_models_repository.py  test_prompt_catalog.py  test_solution_runtime.py  test_validation.py
